[package]
name = "matcha"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
async-std = { version = "1.9", features = ["unstable", "attributes"] }
xactor = "0.7"
async-trait = "0.1"
tide = "0.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.3"
anyhow = "*"
once_cell = "*"